--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.2.9
   google_sign_in: ^6.0.1
   flutter_hooks: ^0.18.6
+  cloud_firestore: ^4.4.3
 
 dev_dependencies:
   flutter_test:
