--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.0.1
   flutter_hooks: ^0.18.6
   cloud_firestore: ^4.4.3
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
