--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,12 +69,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/fares.jpg
-    - assets/images/image_35.png
-    - assets/images/UI/1.png
-    - assets/images/UI/2.png
-    - assets/images/UI/3.png
-    - assets/images/arrow.png
+    - assets/images/
+    - assets/images/UI/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
